-get-ui-io-ports: to get keyboard state and joystick
-get-snapshot: get a ZSF snapshot from ZRCP
-print-footer: print message on footer
-put-snapshot: put a ZSF snapshot from ZRCP
-send-keys-event: simulates key press/release
-test-tcp-connect: testing tcp connection

Added Pentagon 16C colour mode emulation
Added 1024 KB RAM emulation for Spectrum & Pentagon

Added Borland Gui Style
Added ZX81 online game browser
Added ZXInfo/WOS game browser
Added total run time statistics 
Added checking for updates
Added sending anonymous statistics use
Added setting --disablemenuandexit: it closes the emulator when the menu is going to be opened. It's the same behaviour as previous --disablemenu. Now --disablemenu only disables the menu but does not close the emulator

Improved Debugging: 
-added setting to dump .zsf snapshot when a cpu panic is fired
Improved Hex editor: can now copy to a different memory zone
Improved menu: can now use PgUp,PgDn to jump between menu items
Improved Debug CPU Window: can now resize height and have more debug lines

Improved assembler: added defs command
Improved AY Sheet: now you can select which AY Chip to show
Improved file selector: when asking for a directory, only shows directories, not files
Improved curses driver: symbol @ simulates ESC on menu
Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80

Fixed f_seek call on esxdos handler
Fixed segfault error when using breakpoints like peek/opcode in config file
Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
Fixed average cpu statistics when footer is not enabled
Fixed kempston mouse emulation on Next machine: wheel bits always return 0
Fixed bug extracting PAWS words when a word is type Pronoun



Version 8.0. 19 July 2019 - World Destruction edition

Improved menu interface: